z-index fix

--- a/_scss/elements/_masthead.scss
+++ b/_scss/elements/_masthead.scss
@@ -1,5 +1,7 @@
 .main-intro {
   background: $secondary-background-color;
+  position: relative;
+  z-index: 1;
   
   .container h2 { color: map-get($army-branding, gold); }
 }
